<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B03DDFD"
    tools:context=".Principal">

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="onClick"
        android:text="@string/btn_Registrarse"
        app:layout_constraintStart_toStartOf="@+id/btn_inisesion"
        app:layout_constraintTop_toBottomOf="@+id/btn_inisesion" />

    <Button
        android:id="@+id/btn_inisesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="onClick"
        android:text="@string/btn_inisesion"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_acerca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btn_acercade"
        app:layout_constraintStart_toStartOf="@+id/btn_registrarse"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrarse" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/app_lux" />
</android.support.constraint.ConstraintLayout>